# covid-19_tokyo_analysis

./: LICENSE  README.md  covid-19_tokyo.ipynb  pyproject.toml
main/: covid-19_tokyo.ipynb  http_request.py
