[tool.poetry]
name = "covid-19_tokyo_analysis"
version = "0.1.0"
description = "analysis of number of infected in Tokyo"
authors = ["Chihiro Kondo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
jupyterlab = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
